--- a/Resources/css/index-style.css
+++ b/Resources/css/index-style.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 80px;
     font-weight: 600;
 }
 
@@ -26,13 +26,14 @@ h4 {
     font-weight: 350;
 }
 
+/* Página inicial */
 /* Header */
 
 html, body {
     height: 100%;
 }
 
-header {
+#headerStartPage {
     width: 100%;
     height: 15rem;
     display: flex;
@@ -49,8 +50,12 @@ header {
 /* Body */
 
 #userContainer {
+    height: 79%;
+}
+
+#mainStartPage {
     width: 100%;
-    min-height: 80%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,9 +67,8 @@ header {
     width: 40rem;
     height: 7rem;
     position: relative;
-    top: 0.75rem;
-    margin-top: 5rem;
-    margin-bottom: 9rem;
+    margin-top: -4rem;
+    margin-bottom: -10rem;
     font-size: 3rem;
     border-radius: 15px;
     text-align: center;
@@ -73,7 +77,9 @@ header {
 #startButton {
     width: 20rem;
     height: 5rem;
-    margin-bottom: 3rem;
+    position: relative;
+    top: -15rem;
+    margin-bottom: -10rem;
     background-color: #F58E29;
     border-radius: 0.75rem;
     font-size: 3rem;
@@ -88,7 +94,7 @@ header {
 
 /* Footer */
 
-footer {
+#footerStartPage {
     width: 100%;
     position: relative;
     top: 0;
@@ -97,4 +103,150 @@ footer {
     justify-content: center;
     align-items: center;
     height: 4rem;
+}
+/* ------------------------------------------------------- */ 
+/* Página de juego */
+/* Header */
+
+#headerGamePage {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #5511F5;
+}
+
+#titleH1Main {
+    font-size: 55px;
+    margin-left: 7rem;
+}
+
+#userVarible {
+    width: 8rem;
+    height: 3rem;
+    border: 1px solid black;
+    margin-left: 2rem;
+}
+
+#lifes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    margin-left: 7rem;
+}
+
+.image {
+    width: 3rem;
+    height: 3rem;
+    padding-right: 0.75rem;
+}
+
+/* Body */
+#mainGamePage {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(#5511F5, #F58E29);
+}
+
+#container {
+    width: 90%;
+    height: auto;
+    display: flex;
+    position: relative;
+    top: 2rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    margin-bottom: 3rem;
+}
+
+#question, form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+
+#question {
+    height: 17rem;
+    border-radius: 3rem;
+    margin-bottom: 8rem;
+}
+
+#questionH2 {
+    font-size: 2.5rem;
+}
+
+#container form {
+    border-radius: 2rem;
+}
+
+#answer {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    text-align: center;
+    justify-items: center;
+    align-content: flex-start;
+    border-radius: 2rem;
+    border: 1px solid white;
+    font-size: 2.5rem;
+}
+
+#gameButton {
+    width: 13rem;
+    height: 3.75rem;
+    position: relative;
+    top: 1rem;
+    margin-bottom: -10rem;
+    background-color: #F58E29;
+    border-radius: 0.75rem;
+    font-size: 2rem;
+    color: white;
+}
+
+#gameButton:hover {
+    width: 14rem;
+    height: 4rem;
+    background-color: #5511F5;
+}
+
+/* Footer */
+
+#footerGamePage {
+    width: 100%;
+    position: relative;
+    top: 0;
+    background-color: #F58E29;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6rem;
+    font-size: 2rem;
+}
+
+/* ------------------------------------------------------- */
+/* Página final */
+
+
+
+
+
+/* ------------------------------------------------------- */
+/* Inicializamos las páginas de juego y final como ocultas */
+
+#headerGamePage, #headerFinalPage, 
+#mainGamePage, #mainFinalPage, 
+#footerGamePage, #footerFinalPage {
+    display: none;
 }
