--- a/Resources/css/index-style.css
+++ b/Resources/css/index-style.css
@@ -1,12 +1,13 @@
 body {
     box-sizing: border-box;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: white;
     font-size: 16px;
     font-weight: 300;
 }
 
 h1 {
+    font-family: 'Lora', serif;
     font-size: 80px;
     font-weight: 600;
 }
@@ -39,7 +40,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #5511F5;
+    background-color: #380036;
 }
 
 #mickey {
@@ -60,7 +61,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background: linear-gradient(#5511F5, #F58E29);
+    background: linear-gradient(#380036, #0CBABA);
 }
 
 #user {
@@ -78,18 +79,21 @@ html, body {
     width: 20rem;
     height: 5rem;
     position: relative;
-    top: -15rem;
+    top: 1rem;
     margin-bottom: -10rem;
-    background-color: #F58E29;
+    background-color: #0CBABA;
     border-radius: 0.75rem;
     font-size: 3rem;
-    color: white;
+    color: #380036;
+    font-weight: 300;
+    border: 2px solid #380036;
 }
 
 #startButton:hover {
     width: 21rem;
     height: 5.2rem;
-    background-color: #5511F5;
+    background-color: #380036;
+    color: white;
 }
 
 /* Footer */
@@ -98,11 +102,12 @@ html, body {
     width: 100%;
     position: relative;
     top: 0;
-    background-color: #F58E29;
+    background-color: #0CBABA;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 4rem;
+    color: #380036;
 }
 /* ------------------------------------------------------- */ 
 /* Página de juego */
@@ -110,13 +115,13 @@ html, body {
 
 #headerGamePage {
     width: 100%;
-    height: 10rem;
+    height: 8rem;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    background-color: #5511F5;
+    background-color: #380036;
 }
 
 #titleH1Main {
@@ -148,20 +153,21 @@ html, body {
 /* Body */
 #mainGamePage {
     width: 100%;
-    min-height: 100%;
+    /*height: 950px;*/
+    min-height: 115%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(#5511F5, #F58E29);
+    background: linear-gradient(#380036, #0CBABA);
 }
 
 #container {
-    width: 90%;
-    height: auto;
+    width: 80%;
+    min-height: 100%;
     display: flex;
     position: relative;
-    top: 2rem;
+    top: 0rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -178,9 +184,9 @@ html, body {
 }
 
 #question {
-    height: 17rem;
+    height: 10rem;
     border-radius: 3rem;
-    margin-bottom: 8rem;
+    margin-bottom: 5rem;
 }
 
 #questionH2 {
@@ -193,7 +199,7 @@ html, body {
 
 #answer {
     width: 100%;
-    height: 10rem;
+    height: 7rem;
     display: flex;
     text-align: center;
     justify-items: center;
@@ -207,9 +213,9 @@ html, body {
     width: 13rem;
     height: 3.75rem;
     position: relative;
-    top: 1rem;
+    top: 3rem;
     margin-bottom: -10rem;
-    background-color: #F58E29;
+    background-color: #0CBABA;
     border-radius: 0.75rem;
     font-size: 2rem;
     color: white;
@@ -218,29 +224,66 @@ html, body {
 #gameButton:hover {
     width: 14rem;
     height: 4rem;
-    background-color: #5511F5;
+    background-color: #380036;
 }
 
-/* Footer */
-
-#footerGamePage {
-    width: 100%;
-    position: relative;
-    top: 0;
-    background-color: #F58E29;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 6rem;
+#puntuacion {
+    margin-top: 17rem;
     font-size: 2rem;
+    color: white;
 }
 
 /* ------------------------------------------------------- */
 /* Página final */
 
+/* Header */
+#headerFinalPage {
+    width: 100%;
+    height: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #380036;
+}
+
+/* Main */
+#mainFinalPage {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(#380036, #0CBABA);
+}
+
+#mainFinalPage h2 {
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+#finalTitle {
+    margin-bottom: 10rem;
+}
+
+#finalTitle, #finalPunctuation {
+    max-width: 70%;
+    height: auto;
+}
 
 
+/* Footer */
 
+#footerFinalPage {
+    width: 100%;
+    position: relative;
+    top: 0;
+    background-color: #0CBABA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4rem;
+}
 
 /* ------------------------------------------------------- */
 /* Inicializamos las páginas de juego y final como ocultas */
